수정: 조회페이지에서 팀상태에 따라 버튼 UI가 다르게 나오도록 수정
list_team, 메인페이지에서 유저를 제외하고 조회하도록 수정
팀 상태에 따라 버튼이 비활성화되어 보이도록 수정

--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -61,8 +61,22 @@
                     <span th:unless="${#strings.contains(team.getNicknameByMentor(),'empty')}"
                           th:text="${team.getNicknameByMentor()}">멘토</span>
                 </td>
-                <td>
-                    <button type="button" class="btn btn-primary" th:onclick="onclick_join([[${team}]])">참여하기</button>
+                <td style='text-align:center; vertical-align:middle'>
+                    <div class="d-grid mx-auto">
+                        <button type="button" class="btn btn-primary"
+                                th:if="${#strings.contains(team.status, 'READY')}"
+                                th:onclick="onclick_join([[${team}]])">참여하기
+                        </button>
+                        <button type="button" class="btn btn-primary"
+                                th:if="${#strings.contains(team.status, 'FULL')}" disabled>인원 모집 완료
+                        </button>
+                        <button type="button" class="btn btn-secondary"
+                                th:if="${#strings.contains(team.status, 'WAITING')}" disabled>멘토를 기다리는 중
+                        </button>
+                        <button type="button" class="btn btn-secondary"
+                                th:if="${#strings.contains(team.status, 'END')}" disabled>죵료된 멘토링
+                        </button>
+                    </div>
                 </td>
             </tr>
             </tbody>
