추가: 시간설정에서 팀 삭제시 경고 modal 창이 나타나도록 추가
Bug Fix: modal 이벤트 성공후 자동으로 페이지이동이 안되는 버그 수정

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -15,7 +15,7 @@
     </div>
     <hr/>
 
-    <!-- Modal alert -->
+    <!-- Modal -->
     <div th:replace="fragment/alert_modal :: modal"></div>
 
     <h2>팀 목록 확인하고 참여하기</h2>
