--- a/src/main/resources/templates/fragment/alert_modal.html
+++ b/src/main/resources/templates/fragment/alert_modal.html
@@ -73,7 +73,7 @@
                             alert(ajax_req_info_alert.status_message.fail + "\n" + data.message);
                         } else {
                             alert(ajax_req_info_alert.status_message.success)
-                            window.location.href = '/list_myteam';
+                            ajax_req_info_alert.success();
                         }
                     },
                     error: (request, status, error) => {
