추가: #161 footer에 이슈 제보 버튼 추가

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -12,6 +12,12 @@
                    role="button">
                     <i class="bi bi-github"></i>
                 </a>
+
+                <a class="btn btn-outline-secondary btn-floating m-1"
+                   href="https://github.com/innovationacademy-kr/swlabs-helper/issues"
+                   role="button">
+                    <i class="bi bi-pencil-square"></i>이슈 제보하기
+                </a>
             </section>
         </div>
         <!-- Grid container -->
