수정: 멘토는 팀 탈퇴 버튼이 비활성화 되도록 변경

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -65,8 +65,16 @@
                           th:text="${team.getNicknameByMentor()}">멘토</span>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-danger" th:onclick="onclick_modal_alert([[${team}]])">탈퇴
-                    </button>
+                    <div th:if="${user != null}">
+                        <button type="button" class="btn btn-danger"
+                                th:if="${team.getNicknameByMentor() != user.getNickname()}"
+                                th:onclick="onclick_modal_alert([[${team}]])">팀 탈퇴
+                        </button>
+                        <button type="button" class="btn btn-danger"
+                                th:if="${team.getNicknameByMentor() == user.getNickname()}"
+                                th:onclick="onclick_modal_alert([[${team}]])" disabled>팀 탈퇴
+                        </button>
+                    </div>
                 </td>
             </tr>
             </tbody>
