--- a/src/main/resources/templates/set_time.html
+++ b/src/main/resources/templates/set_time.html
@@ -17,7 +17,7 @@
 
 <div layout:fragment="custom-content">
     <div class="page_title">
-        <h2>시간 설정</h2>
+        <h2>멘티 신청</h2>
         <p>원하는 멘토링을 설정할 수 있습니다. <b>멘토링 받기</b> 버튼을 눌러 과목과 시간, 그리고 날짜를 지정하면 멘토링이 개설됩니다.<br/>
             이후 개설된 멘토링은 멘토가 멘토링을 지정하면 팀이 성사되고 멘티를 추가모집할 수 있습니다.</p>
     </div>
@@ -31,7 +31,7 @@
     <div th:replace="fragment/alert_modal :: modal"></div>
     <!-- list -->
     <div class="list-container">
-        <h2>멘티 목록</h2>
+        <h2>내가 만든 멘토링 (멘티) 목록</h2>
         <table class="table">
             <thead>
             <tr>
