--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -33,11 +33,11 @@
             </li>
             <li class="nav-item">
                 <a href="/set_time" class="nav-link"
-                   th:classappend="${currentPage} == 'set_time' ? 'active' : '' ">시간 설정</a>
+                   th:classappend="${currentPage} == 'set_time' ? 'active' : '' ">멘티 신청</a>
             </li>
             <li class="nav-item">
                 <a href="/create_team" class="nav-link"
-                   th:classappend="${currentPage} == 'create_team' ? 'active' : '' ">팀 만들기</a>
+                   th:classappend="${currentPage} == 'create_team' ? 'active' : '' ">멘토 신청</a>
             </li>
             <li class="nav-item">
                 <a href="/list_team" class="nav-link"
