--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -12,6 +12,7 @@
         <h2>팀 목록</h2>
         <p>모든 멘토링 팀 목록을 조회합니다.<br/>
             조회된 목록에서 참여하거나 멘토링 팀 탈퇴를 할 수 있습니다.</p>
+        <p><b>참여하기</b>를 누르면 멘토링에 멘트로 참여할 수 있고 목록이 <b>내가 속한 팀</b>으로 이동합니다.</p>
     </div>
     <hr/>
     <h2>팀 목록 확인하고 참여하기</h2>
