수정: 팀 상태가 READY일 경우에만 탈퇴하도록 변경

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -68,11 +68,11 @@
                 <td>
                     <div th:if="${user != null}">
                         <button type="button" class="btn btn-danger"
-                                th:if="${team.getNicknameByMentor() != user.getNickname()}"
+                                th:if="${#strings.contains(team.status, 'READY')}"
                                 th:onclick="onclick_modal_alert([[${team}]])">팀 탈퇴
                         </button>
                         <button type="button" class="btn btn-danger"
-                                th:if="${team.getNicknameByMentor() == user.getNickname()}"
+                                th:unless="${#strings.contains(team.status, 'READY')}"
                                 th:onclick="onclick_modal_alert([[${team}]])" disabled>팀 탈퇴
                         </button>
                     </div>
